--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "description": "Using the Star Wars API",
   "main": "index.js",
   "scripts": {
+    "start": "cp ./src/index.html ./dist/index.html && npm run-script prod_build && webpack-dev-server --mode development --open ",
+    "build": "webpack",
+    "prod_build": "webpack --mode production",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -18,5 +21,25 @@
   "bugs": {
     "url": "https://github.com/branchlover/SWAPI/issues"
   },
-  "homepage": "https://github.com/branchlover/SWAPI#readme"
+  "homepage": "https://github.com/branchlover/SWAPI#readme",
+  "dependencies": {
+    "create-react-class": "^15.6.3",
+    "lodash": "^4.17.10",
+    "react": "^16.4.0",
+    "react-dom": "^16.4.0",
+    "react-router": "^4.2.0",
+    "react-router-dom": "^4.2.2",
+    "superagent": "^3.8.3"
+  },
+  "devDependencies": {
+    "babel-cli": "^6.26.0",
+    "babel-core": "^6.26.3",
+    "babel-loader": "^7.1.4",
+    "babel-preset-env": "^1.7.0",
+    "babel-preset-react": "^6.24.1",
+    "html-loader": "^0.5.5",
+    "webpack": "^4.9.1",
+    "webpack-cli": "^2.1.4",
+    "webpack-dev-server": "^3.1.4"
+  }
 }
